--- a/src/main/resources/templates/sucursal/crearSucursal.html
+++ b/src/main/resources/templates/sucursal/crearSucursal.html
@@ -11,6 +11,9 @@
 <body>
     <div layout:fragment="content">
         <div class="container mt-4">
+            <!-- Mostrar mensajes de éxito o error -->
+            <div th:if="${success}" class="alert alert-success" th:text="${success}"></div>
+            <div th:if="${error}" class="alert alert-danger" th:text="${error}"></div>
             <h2>Registrar Nueva Sucursal</h2>
 
             <form th:action="@{/sucursal/save}" method="post">
@@ -49,16 +52,6 @@
                             <option value="" disabled selected>Seleccione una empresa</option>
                             <option th:each="empresa : ${empresas}" th:value="${empresa.idEmpresa}"
                                 th:text="${empresa.nombreComercial}"></option>
-                        </select>
-                    </div>
-                </div>
-
-                <div class="row mb-3">
-                    <label class="col-sm-2 col-form-label">Estado</label>
-                    <div class="col-sm-10">
-                        <select class="form-select" name="idEstado" required>
-                            <option value="1">Activo</option>
-                            <option value="0">Inactivo</option>
                         </select>
                     </div>
                 </div>
